<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/course"
            android:title="@string/course" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/person"
            android:title="ACCOUNT SETTING" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about" />
    </group>
</menu>